# my_lvgl_test

./: README.md  sdkconfig  sdkconfig.old
components/mygui/: CMakeLists.txt
main/: CMakeLists.txt  lcd.c  lcd.h  main.c  mylvgl.c  mylvgl.h  pca9557.c  pca9557.h  yingwu.h
